<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".dialogs.DialogCrearPersonajeFragment">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/cardBackground">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:src="@drawable/logo"
            android:layout_weight="1"
            android:contentDescription="@string/imagen_logo" />

        <TextView
            android:layout_width="358dp"
            android:layout_height="55dp"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:text="@string/crear_personaje"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="20sp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/nuevaCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/nuevaFoto"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:src="@drawable/predeterminado"
                android:contentDescription="@string/nueva_foto" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/nuevoNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/nombreHint"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:autofillHints=""
                    android:inputType="text" />

                <EditText
                    android:id="@+id/nuevaRaza"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="15dp"
                    android:hint="@string/razaHint"
                    android:autofillHints=""
                    android:inputType="text" />

                <EditText
                    android:id="@+id/nuevoAtaqueEspecial"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="15dp"
                    android:hint="@string/ataque_especial_hint"
                    android:autofillHints=""
                    android:inputType="text" />

                <EditText
                    android:id="@+id/nuevaDescripcion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="15dp"
                    android:hint="@string/descripcionHint"
                    android:autofillHints=""
                    android:inputType="text" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCrear"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:text="@string/crear"
            android:textColor="@color/black"
            app:backgroundTint="#F5DE00"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnCancelar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/cancelar"
            android:layout_weight="1"
            app:backgroundTint="#BF0012"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>