<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".dialogs.DialogEditarPersonajeFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/cardBackground">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:src="@drawable/logo"
            android:layout_weight="1"
            android:contentDescription="@string/imagen_logo" />

        <TextView
            android:layout_width="358dp"
            android:layout_height="55dp"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:text="@string/editar_personaje"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="20sp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/editarCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/editarFoto"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:src="@drawable/predeterminado"
                android:contentDescription="@string/imagen_editar_personaje" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editarNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/nombre"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:autofillHints=""
                    android:inputType="text"
                    tools:ignore="LabelFor" />

                <EditText
                    android:id="@+id/editarRaza"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/raza"
                    android:autofillHints=""
                    android:inputType="text"
                    tools:ignore="LabelFor" />

                <EditText
                    android:id="@+id/editarAtaqueEspecial"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/ataque_especial"
                    android:autofillHints=""
                    android:inputType="text"
                    tools:ignore="LabelFor" />

                <EditText
                    android:id="@+id/editarDescripcion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/descripcion"
                    android:autofillHints=""
                    android:inputType="text"
                    tools:ignore="LabelFor" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#F5DE00"
            android:textColor="@color/black"
            android:text="@string/aceptar"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            tools:ignore="ButtonStyle"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#BF0012"
            android:textColor="#ffffff"
            android:text="@string/cancelar"
            android:layout_weight="1"
            tools:targetApi="lollipop"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>