<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".dialogs.DialogEditarTransformacionFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/cardBackground"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:src="@drawable/logo"
            android:contentDescription="@string/imagen_logo" />

        <TextView
            android:layout_width="358dp"
            android:layout_height="55dp"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/editar_transformacion"
            android:textColor="#ffffff"
            android:textSize="18sp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewEditarTransformacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/editarFotoTransformacion"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:src="@drawable/predeterminado"
                android:contentDescription="@string/imagen_editar_transformacion" />


            <EditText
                android:id="@+id/editarNombreTransformacion"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/nombreHint"
                android:textSize="25sp"
                android:textStyle="bold"
                android:autofillHints=""
                android:inputType="text"
                tools:ignore="TextFields" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnEditarTransformacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:backgroundTint="#F5DE00"
            android:textColor="@color/black"
            android:text="@string/editar"
            tools:ignore="ButtonStyle"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btnCancelarEditarTransformacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#BF0012"
            android:text="@string/cancelar"
            android:textColor="#ffffff"
            tools:ignore="ButtonStyle"
            tools:targetApi="lollipop" />

    </LinearLayout>

</LinearLayout>